chore: replaced assertj with vanilla junit