@@ -6,10 +6,9 @@ import org.junit.runner.RunWith;
 import org.junit.runners.JUnit4;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
-import static org.assertj.core.api.Java6Assertions.assertThat;
+import static org.junit.Assert.assertEquals;
 
 @RunWith( JUnit4.class )
 public class RuleTest
@@ -26,14 +25,14 @@ public class RuleTest
         RuleAction ruleAction = new MockRuleAction();
 
         Rule rule = Rule.create( "test_program_stage", 1,
-            "test_condition", Arrays.asList( ruleAction ), "", "uid" );
+            "test_condition", List.of(ruleAction), "", "uid" );
 
-        assertThat( rule.programStage() ).isEqualTo( "test_program_stage" );
-        assertThat( rule.condition() ).isEqualTo( "test_condition" );
-        assertThat( rule.priority() ).isEqualTo( 1 );
-        assertThat( rule.actions().size() ).isEqualTo( 1 );
-        assertThat( rule.actions().get( 0 ) ).isEqualTo( ruleAction );
-        assertThat( rule.uid() ).isEqualTo( "uid" );
+        assertEquals( "test_program_stage" , rule.programStage() );
+        assertEquals( "test_condition" , rule.condition() );
+        assertEquals( Integer.valueOf(1) , rule.priority() );
+        assertEquals( 1 , rule.actions().size() );
+        assertEquals( ruleAction , rule.actions().get( 0 ) );
+        assertEquals( "uid" , rule.uid() );
     }
 
     @Test( expected = UnsupportedOperationException.class )
@@ -51,9 +50,9 @@ public class RuleTest
         // mutating source array
         actions.clear();
 
-        assertThat( rule.actions().size() ).isEqualTo( 2 );
-        assertThat( rule.actions().get( 0 ) ).isEqualTo( ruleActionOne );
-        assertThat( rule.actions().get( 1 ) ).isEqualTo( ruleActionTwo );
+        assertEquals( 2 , rule.actions().size() );
+        assertEquals( ruleActionOne , rule.actions().get( 0 ) );
+        assertEquals( ruleActionTwo , rule.actions().get( 1 ) );
 
         rule.actions().clear();
     }
